--- a/public_html/css/productpresentation.css
+++ b/public_html/css/productpresentation.css
@@ -76,7 +76,11 @@ input.one{
 }
 
 img.one{
-	padding-top: 7px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 7px;
+    width: 77px;
 }
 
 body{
@@ -112,12 +116,12 @@ body{
 	width: 100%;
 	z-index:1;
 	height:41px;
-	background-image:url(/img//flyfoenix_header.png);
+	background-image:url(/img/flyfoenix_header.png);
 	background-repeat:repeat-x;
 }
 
 #logoHeader{
-	position: absolute;
+	position: relative;
 	top: 0px;
 	left:0px;
 	width: 1367px;
@@ -151,17 +155,19 @@ body{
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: 70px;
+	top: 70px;
 	width: 972px;
+	height:97px;
 	z-index: 5;
+	background-image:url(/img/productpresentation/flyfoenix_product_presentation_lightgrayheader.png);
+	background-repeat:no-repeat;
 }
 
 #selector{
-	width: 150px;
-	max-width: 150px;
-	margin-left: 793px;
-    position: absolute;
-    width: 150px;
+	float: right;
+    position: relative;
+    right: 30px;
+    width: 150px
 }
 
 #gender{
@@ -192,25 +198,25 @@ body{
 }
 
 #campuscouturelogo{
-	margin-left: 20px;
-    margin-top: 20px;
-    position: absolute;
+	left: 20px;
+    position: relative;
+    top: 20px;
     z-index: 5;
 }
 
 #buynowtag{
-	margin-left: 360px;
-    margin-top: -20px;
+	left: 360px;
     position: absolute;
+    top: -20px;
     z-index: 5;
 }
 
 #counter{
 	font-size: 22px;
-	margin-left: 403px;
-    margin-top: 55px;
+    left: 403px;
     position: absolute;
     text-align: left;
+    top: 55px;
     z-index: 5;
 }
 
@@ -223,8 +229,11 @@ body{
 	position: relative;
 	margin-left: auto;
 	margin-right: auto;
-	margin-top: -20px;
+	top: 50px;
 	width: 972px;
+	background-image: url(/img/productpresentation/flyfoenix_product_presentation_darkgraymain.png);
+	background-repeat:no-repeat;
+	height:564px;
 }
 
 #overlayDark{
@@ -237,53 +246,44 @@ body{
 }
 
 #comments{
-	position: relative;
-	float: left;
-	margin-left: 7px;
-	margin-top: 7px;
-	z-index: 5;
+	left: 7px;
+    position: absolute;
+    top: 7px;
+    z-index: 5;
 }
 
 #buytwo{
-	position: relative;
 	float: right;
-	margin-right: 23.5px;
-	margin-top: 9.5px;
-	z-index: 5;
-}
-
-#arrows{
-	margin-top: 240px;
-    position: absolute;
-    width: 972px;
+    margin-right: 23.5px;
+    margin-top: 9.5px;
 }
 
 #leftarrow{
-	position: relative;
-	float: left;
-	margin-left: 8px;
+	position: absolute;
+	left: 8px;
+	top:240px;
 	z-index:5;
 }
 
 #rightarrow{
-	position: relative;
-	float: right;
-	margin-right: 21px;
+	position: absolute;
+	top: 240px;
+	right: 21px;
 	z-index: 5;
 }
 
-#bodyContainerLight{
+#viewer{
 	position: absolute;
-	margin-left: 60px;
-	margin-top: 54px;
-	width: 575px;
+	left: 60px;
+	top: 54px;
+	width: 580px;
+	height:446px;
+	background-image:url(/img/productpresentation/flyfoenix_product_presentation_lightgraymain.png);
+	background-repeat: no-repeat;	
 	z-index: 6;
+	background-position:center;
 }
 
-#overlayLight{
-	position: relative;
-	
-}
 
 #sliderwrapper{
 	
@@ -293,55 +293,45 @@ body{
 	
 }
 
-#viewer{
-	left: 77px;
-    position: absolute;
-    top: 70px;
-    width: 550px;
-    z-index: 6;
-}
+
 
 #productname{
-	position:relative;
 	display: block;
-	margin-left:auto;
-	margin-right:auto;
-	width: 320px;
-	bottom:0px;
-	padding-top: 3px;
-	text-align:center;
-	font-weight:bold;
+    font-weight: bold;
+    padding-top: 3px;
+    text-align: center;
+    width: 351px;
 }
 
 #uniquefeatures{
-	left: 0;
-    position: relative;
-    top: 0;
-    width: 95px;
+ 	float: left;
+    width: 112px;
+	margin-top:15px;
 }
 
 #uftext{
-	position:relative;
-	left: -7px;
+	text-align: center;
+    width: 112px;
+	display:block;
 }
 
 #mainphoto{
-	left: 95px;
-    position: absolute;
-    top: 0;
-    width: 352px;
+    width: 351px;
+	height:401px;
+	display:inline-block;
+	margin-top:15px;
 }
 
 #thumbnails{
-	left: 465px;
-    position: absolute;
-    top: 0;
-    width: 95px;
+	float: right;
+    width: 112px;
+	margin-top:15px;
 }
 
 #thumbtext{
-	position:relative;
-	left: 4px;
+	width: 112px;
+	text-align:center;
+	display:block;
 }	
 
 #content{
@@ -358,8 +348,7 @@ body{
 }
 
 #sharethis{
-	position: relative;
-	
+	height:37px;
 }
 
 #inventory{
@@ -368,7 +357,7 @@ body{
 }
 
 #description{
-	position:relative;
+	position: relative;
 	left: 6px;
 }
 
@@ -379,13 +368,11 @@ body{
 }
 
 #size{
-	position: relative;
-	left: 6px;
+	margin-left: 6px;
 }
 
 #quantity{
-	position:relative;
-	left: 20px;
+	margin-left: 20px;
 }
 
 #addtocart{
