--- a/public_html/css/productpresentation.css
+++ b/public_html/css/productpresentation.css
@@ -198,8 +198,19 @@ body{
 }
 
 #favorite{
+	display:block;
 	float: right;
 	margin-top: 7px;
+	background-repeat:no-repeat;
+	width:14px;
+	height:13px;
+}
+
+#favorite.heart-no{
+	background-image:url('/img/ajax/heart_small.png');	
+}
+#favorite.heart{
+	background-image:url('/img/ajax/heart_small_red.png');	
 }
 
 #search{
@@ -438,35 +449,42 @@ a #rightarrow:hover{
 	padding-bottom: 9px;
 	padding-left: 5px;
 }
-
-#size{
-	display:inline-block;
-	
-	margin-left: 6px;
+.size-qty-wrapper{
+	padding-top:5px;	
 }
-#size select{
+.size{
+	display:inline-block;
+	margin-left: 6px;
+	float:left;
+}
+.size select{
 	border-style:none;
 	border-width:0px;
 	margin:0px;
 	width:100px;	
 }
-#quantity{
-	padding:5px;
+.quantity{
 	display:inline-block;
-	
+	float:right;
 	margin-left:20px;
 }
-#quantity input{
+.quantity input{
 	width:100px;
 	border:none;
 	text-align:right;	
 }
-#addtocart{
+.add-to-cart, .checkout, .cancel-checkout{
 	margin-top:10px;
 	margin-left:5px;
 	font-weight:normal;
+	cursor:pointer;
 }
-	
+.cancel-checkout{
+	margin-left:30px;	
+}
+.checkout, .cancel-checkout{
+	float:right;	
+}
 /*End Body Container Elements*/
 
 //mioZoom
@@ -522,4 +540,54 @@ a.whitelink.chart {
 	opacity:.50;
 	alpha(opacity=50);
 	background-color:#333;
+}
+
+#list-schools{
+	max-height:100px;
+	overflow:auto;
+}
+#list-schools a{
+	color:#FFF;
+	text-decoration:none;
+	padding:5px;
+	display:inline-block;	
+}
+#list-schools li{
+	padding-right:50px;	
+}
+#list-schools li.loading{
+	background-image:url(/img/ajax/loading.gif);
+	background-position:95% center;
+	background-repeat:no-repeat;	
+}
+#list-schools li.added{
+	background-image:url(/img/ajax/check.png);
+	background-position:95% center;
+	background-repeat:no-repeat;
+}
+#list-schools li.fail{
+	background-image:url(/img/ajax/fail.png);
+	background-position:95% center;
+	background-repeat:no-repeat;
+}
+#list-schools li.heart{
+	background-image:url(/img/ajax/heart_red.png);
+	background-position:95% center;
+	background-repeat:no-repeat;
+}
+#list-schools li.even{
+	background-color:transparent;	
+}
+#list-schools li.odd{
+	padding-top:0px;
+	background-color:#999;	
+}
+#list-schools li:hover{
+	background-color:#333;
+}
+
+p.checkout-pop-count {
+	margin-top:30px;
+	padding-bottom:5px;
+	font-size:16px;	
 }
