updated look of the website

--- a/public_html/css/accessories.css
+++ b/public_html/css/accessories.css
@@ -427,14 +427,15 @@ a #rightarrow:hover{
 /*End Body Container Elements*/
 
 #list-schools{
-	max-height:100px;
+	height:400px;
 	overflow:auto;
 }
 #list-schools a{
 	color:#FFF;
 	text-decoration:none;
 	padding:5px;
-	display:inline-block;	
+	display:inline-block;
+	width:100%;	
 }
 #list-schools li{
 	padding-right:50px;	
