--- a/public_html/css/default.css
+++ b/public_html/css/default.css
@@ -20,7 +20,7 @@ input, select{
 	background-color:#CCC;	
 	color: #333;
 	font-family:Arial, Helvetica, sans-serif;
-	font-size: 16px;
+	font-size: 12px;
 	border: none;
 	
 	border-radius: 5px;
@@ -72,6 +72,7 @@ input.one{
 	text-decoration:none;
 	padding:5px;
 	display:inline-block;	
+	width:100%;
 }
 #list-schools li{
 	padding-right:50px;	
